Campo Telefone adicionado na celula

--- a/app/src/main/res/layout/tile_contact.xml
+++ b/app/src/main/res/layout/tile_contact.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:text="@string/email"/>
 
+    <TextView
+        android:id="@+id/phoneTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/phone"/>
+
 </LinearLayout>
